...
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Toolbar -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/activity_add_edit_menu"
                app:title="@string/activity_add_edit_transaction_create_transaction" />

            <!-- Layout for transaction value -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- EditText for entering transaction value. -->
                <com.blackcat.currencyedittext.CurrencyEditText
                    android:id="@+id/etPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:cursorVisible="false"
                    android:fontFamily="sans-serif-medium"
                    android:imeOptions="actionDone"
...
                    android:paddingEnd="8dp"
                    android:textSize="36sp"
                    tools:text="5,99 €" />

                <!-- Positive/negative transaction switch -->
                <com.rm.rmswitch.RMSwitch
                    android:id="@+id/switchPosNeg"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="16dp"
                    app:checked="false"
                    app:enabled="true"
...
            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Payee layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPayee"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_add_edit_transaction_row_height">

            <!-- Payee icon -->
            <ImageView
                android:id="@+id/imageView"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Chosen payee -->
            <TextView
                android:id="@+id/tvPayee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:hint="@string/activity_add_edit_transaction_payee_hint"
...
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Category layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCategory"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_add_edit_transaction_row_height">

            <!-- Category icon -->
            <ImageView
                android:id="@+id/imageView3"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Chosen category -->
            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:hint="@string/activity_add_edit_transaction_category_hint"
...
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Date layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_add_edit_transaction_row_height">

            <!-- Date icon -->
            <ImageView
                android:id="@+id/imageView2"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Chosen date -->
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:hint="@string/activity_add_edit_transaction_date_hint"
...
                android:src="@drawable/ic_baseline_description_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Description content -->
            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!-- Create/Edit button -->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabCreateApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/activity_add_edit_transaction_create"
        app:icon="@drawable/ic_baseline_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

