<resources>
    <string name="app_name">Zero Based Budgeting App</string>

    <!-- Zero -->

    <!-- Bottom navigation bar -->

    <!-- ManageCategoriesActivity -->
    <string name="activity_manage_categories_title">Manage Categories</string>

    <string name="activity_manage_categories_add_category">Add Category</string>

    <string name="activity_manage_categories_delete_dialog_title">Delete Category?</string>
    <string name="activity_manage_categories_delete_dialog_content">
        Do you really want to delete %s? All transactions that use this category will be set to \"To be Budgeted\" and its budgets will be deleted.
    </string>
    <string name="activity_manage_categories_dialog_confirm">Yes</string>
    <string name="activity_manage_categories_dialog_cancel">Cancel</string>

    <string name="activity_manage_categories_discard_dialog_title">Discard Changes?</string>
    <string name="activity_manage_categories_discard_dialog_content">
        Do you really want to discard all changes?
    </string>
    <string name="activity_manage_categories_new_category">New Category</string>

    <!-- AddEditTransactionActivity -->
    <string name="activity_add_edit_transaction_create_transaction">Create Transaction</string>
    <string name="activity_add_edit_transaction_edit_transaction">Edit Transaction</string>

    <string name="activity_add_edit_transaction_delete">Delete</string>

    <string name="activity_add_edit_transaction_payee">Payee</string>
    <string name="activity_add_edit_transaction_category">Category</string>
    <string name="activity_add_edit_transaction_date">Date</string>
    <string name="activity_add_edit_transaction_description">Description (optional)</string>

    <string name="activity_add_edit_transaction_payee_hint">Choose payee</string>
    <string name="activity_add_edit_transaction_category_hint">Choose category</string>
    <string name="activity_add_edit_transaction_date_hint">Set date</string>
    <string name="activity_add_edit_transaction_description_hint">Add description</string>

    <string name="activity_add_edit_transaction_create">Create</string>
    <string name="activity_add_edit_transaction_apply">Apply</string>

    <string name="activity_add_edit_transaction_select_payee">Select payee</string>
    <string name="activity_add_edit_transaction_select_category">Select category</string>

    <string name="activity_add_edit_transaction_add_payee_hint">New payee</string>

    <string name="activity_add_edit_transaction_to_be_budgeted">To be budgeted</string>

    <!-- Fragment budget -->

    <string name="fragment_budget_category">Category</string>
    <string name="fragment_budget_budgeted">Budgeted</string>
    <string name="fragment_budget_available">Available</string>

    <string name="available">Available</string>
    <string name="clear_all_budgets">Clear All Budgets</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="manage_payees">Manage Payees</string>
    <string name="settings">Settings</string>
    <string name="budgets">Budgets</string>
    <string name="transactions">Transactions</string>
    <string name="change_budget">Change Budget</string>
    <string name="undo">UNDO</string>
    <string name="budget_value_zero">Set budgeted value of %s to 0.</string>
    <string name="budget_value_last_month">Set same budget as last month for %s.</string>
    <string name="no_budget_last_month">There is no budget for %s in the last month.</string>

</resources>