<?xml version="1.0" encoding="utf-8"?>

<!-- Menu for add/edit activity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Delete -->
    <item
        android:id="@+id/delete"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/activity_add_edit_transaction_delete"
        app:showAsAction="always" />
</menu>