...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Category list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
